# autonomic

./: .env.example  .gitignore  REQUIREMENTS.md  autonomic-cli.py  pyproject.toml  test_network.py
autonomic_cli/: __init__.py  __main__.py  clients.py  config.py  main.py  models.py  utils.py
autonomic_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_clients.py  test_commands.py  test_outputs.py
